--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <section class="home"> <!-- perbaiki 'Home' menjadi 'home' -->
         <div class="home-content">
             <h3>Hello, It's Me</h3>
-            <h1>Riski Kurniawan</h1>
+            <h1>MUHAMAD KHOIRON</h1>
             <h3>And I am a <span class="text"></span></h3>
             <p>I am a computer science student</p> <!-- perbaiki teks ke bahasa Inggris -->
             <div class="home-sci">
-                <a href="https://www.instagram.com/rsqkrnwn?igsh=cnNna2lzb3k4Y2wy" style="--i:7"><i class='bx bxl-instagram'></i></box-icon></a>
-                <a href="https://wa.me/+6281809208710" style="--i:8"><i class='bx bxl-whatsapp'></i></box-icon></a>
-                <a href="https://www.tiktok.com/@banana251106?_t=8pxkdvACDGK&_r=1" style="--i:9"><i class='bx bxl-tiktok'></i></box-icon></a>
-                <a href="https://www.linkedin.com/in/riski-kurniawan-01966232a?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BYk4%2BioJgT2WAz9MgLwlulQ%3D%3D" style="--i:10"><i class='bx bxl-linkedin' ></i></box-icon></a>
+                <a href="https://www.instagram.com/deathsycth3?igsh=cnNna2lzb3k4Y2wy" style="--i:7"><i class='bx bxl-instagram'></i></box-icon></a>
+                <a href="https://wa.me/+6281287274072" style="--i:8"><i class='bx bxl-whatsapp'></i></box-icon></a>
+                <a href="https://www.tiktok.com/@deatchsycth3?_t=8pxkdvACDGK&_r=1" style="--i:9"><i class='bx bxl-tiktok'></i></box-icon></a>
+                <a href="https://www.linkedin.com/in/muhamad-khoiron-00156551ba?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BYk4%2BioJgT2WAz9MgLwlulQ%3D%3D" style="--i:10"><i class='bx bxl-linkedin' ></i></box-icon></a>
             </div>
             <a href="#contact" class="btn-box">More About Me</a>
         </div>
@@ -41,8 +41,8 @@
         </div>
         <div class="about-text">
             <h2>About<span>Me</span></h2>
-            <h4>Riski Kurniawan</h4>
-            <p>I am a Computer Science Student and i'am 17 years old with a deep passion for information technology. I am fascinated by how technology is changing our lives and committed to being part of that change. I have expertise in electronics and programming, as well as experience as a Network Technician. In addition, I am also an active frontend and web developer, mastering HTML, CSS, and JavaScript, as well as frameworks like React. I enjoy creating responsive and engaging websites, combining functionality with aesthetic design. In addition, I have an interest in graphic design, where I express my creativity. I believe that technology and art can synergize to create amazing experiences. I look forward to contributing to impactful projects and continuing to learn in this field.</p>
+            <h4>MUHAMAD KHOIRON</h4>
+            <p>I am a Computer Science Student and i'am 23 years old with a deep passion for information technology. I am fascinated by how technology is changing our lives and committed to being part of that change. I have expertise in electronics and programming, as well as experience as a Network Technician. In addition, I am also an active frontend and web developer, mastering HTML, CSS, and JavaScript, as well as frameworks like React. I enjoy creating responsive and engaging websites, combining functionality with aesthetic design. In addition, I have an interest in graphic design, where I express my creativity. I believe that technology and art can synergize to create amazing experiences. I look forward to contributing to impactful projects and continuing to learn in this field.</p>
             <a href="#contact" class="btn-box">More About Me</a>
         </div>
     </section>
