--- a/index.html
+++ b/index.html
@@ -242,14 +242,14 @@
             <h4>Lets work together</h4>
             <p>I'm glad you've visited my personal portfolio website! If you have any questions, suggestions, or would like to collaborate, please feel free to contact me through this form. I will endeavor to reply to your message as soon as possible.</p>
             <ul class="contact-list">
-                <li><i class="bx bxs-send"></i> Riski Kurniawan@gmail.com</li>
-                <li><i class="bx bxs-phone"></i> 081809208710</li>
+                <li><i class="bx bxs-send"></i> MUHAMAD KHOIRON (khoiron288@gmail.com)</li>
+                <li><i class="bx bxs-phone"></i> 081287274072</li>
             </ul>
             <div class="contact-icons">
-                <a href="https://www.instagram.com/rsqkrnwn?igsh=cnNna2lzb3k4Y2wy"><i class="bx bxl-instagram"></i></a>
-                <a href="https://wa.me/+6281809208710"><i class="bx bxl-whatsapp"></i></a>
-                <a href="https://www.tiktok.com/@banana251106?_t=8pxkdvACDGK&_r=1"><i class="bx bxl-tiktok"></i></a>
-                <a href="https://www.linkedin.com/in/riski-kurniawan-01966232a?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BYk4%2BioJgT2WAz9MgLwlulQ%3D%3D"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://www.instagram.com/deathsyc3?igsh=cnNna2lzb3k4Y2wy"><i class="bx bxl-instagram"></i></a>
+                <a href="https://wa.me/+6281287274072"><i class="bx bxl-whatsapp"></i></a>
+                <a href="https://www.tiktok.com/@deathsycth3?_t=8pxkdvACDGK&_r=1"><i class="bx bxl-tiktok"></i></a>
+                <a href="https://www.linkedin.com/in/muhamad-khoiron-0015651ba?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BYk4%2BioJgT2WAz9MgLwlulQ%3D%3D"><i class="bx bxl-linkedin"></i></a>
             </div>
         </div>
     
@@ -264,7 +264,7 @@
         </div>
     </section>
     <div class="last-text">
-        <p>developed with Riski Kurniawan</p>
+        <p>developed with MUHAMAD KHOIRON</p>
     </div>
     <a href="#" class="top"><i class='bx bx-up-arrow-alt'></i></a>
     
